commit2 from vscode

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Side Menu</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <h1>Side Menu Page </h1>
-    
-<script src="./script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hover Card</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="about-banner">
+      <div class="img-panel">
+        <figure class="card">
+          <img src="../images/footer2.jpg" alt="" class="card_image" />
+          <figcaption class="card_body">
+            <h2 class="card_title"></h2>
+            <p class="card_description"></p>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="about-content">
+        <h3>Who We Are ?</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum
+          doloribus provident eaque dolor neque quae assumenda repudiandae
+          laboriosam molestias dolore?
+        </p>
+      </div>
+    </div>
+
+    <script src="./script.js"></script>
+  </body>
 </html>
